--- a/openatlas/templates/types/view.html
+++ b/openatlas/templates/types/view.html
@@ -3,58 +3,60 @@
     {{ [[_('types'), 'node_index'], root, node.name]|crumb }}
 {% endblock %}
 {% block content %}
-<div id="tabs" class="tabs-container">
-    <ul>
-        <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
+<div>
+    <ul class="nav nav-tabs" role="tablist">
+        <li class="nav-item"> <a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
         {% if tables['subs'].rows %}
-            <li><a href="#tab-subs">{{ _('subs')|uc_first }} {{ tables['subs']|format_tab_number }}</a></li>
+            <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-subs">{{ _('subs')|uc_first }} {{ tables['subs']|format_tab_number }}</a></li>
         {% endif %}
         {% if tables['entities'].rows or tables['link_entities'].rows %}
             <li>
-                <a href="#tab-entities">{{ _('entities')|uc_first }} {{ (tables['entities'].rows|length + tables['link_entities'].rows|length)|format_tab_number }}</a>
+                <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-entities">{{ _('entities')|uc_first }} {{ (tables['entities'].rows|length + tables['link_entities'].rows|length)|format_tab_number }}</a>
             </li>
         {% endif %}
     </ul>
-    <div id="tab-info">
-        {% if 'editor'|is_authorized and node.root and not root.locked %}
-            <div class="toolbar">
-                {{ _('edit')|button(url_for('node_update', id_=node.id)) }}
-                    {% if not node.system and node.count < 1 and not node.subs %}
-                        {{ _('delete')|button(url_for('node_delete', id_=node.id), onclick="return confirm('" + _('delete')|uc_first + " " + node.name.replace("'", '').replace('"', '') + "?');") }}
-                    {% endif %}
-            </div>
-        {% endif %}
-        <h1>{{ node.name }}</h1>
-        {% if super_ %}
-            <p>{{_('super')|uc_first}}: {{ super_|link|safe }}</p>
-        {% endif %}
-        {{ info|display_info }}
-        {% if root.value_type %}
-            <p>{{_('unit')|uc_first}}: {{node.description}}</p>
-        {% else %}
-            {{ node|description }}
-        {% endif %}
-        {{ node|api_link }}
-    </div>
-    {% if tables['subs'].rows %}
-        <div id="tab-subs">
-            {{ tables['subs'].display('subs')|safe }}
-        </div>
-    {% endif %}
-    {% if tables['entities'].rows or tables['link_entities'].rows %}
-        <div id="tab-entities">
-            {% if 'editor'|is_authorized and not root.value_type %}
+    <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" role="tabpanel" id="tab-info">
+            {% if 'editor'|is_authorized and node.root and not root.locked %}
                 <div class="toolbar">
-                    {{ _('move entities')|button(url_for('node_move_entities', id_=node.id)) }}
+                    {{ _('edit')|button(url_for('node_update', id_=node.id)) }}
+                        {% if not node.system and node.count < 1 and not node.subs %}
+                            {{ _('delete')|button(url_for('node_delete', id_=node.id), onclick="return confirm('" + _('delete')|uc_first + " " + node.name.replace("'", '').replace('"', '') + "?');") }}
+                        {% endif %}
                 </div>
             {% endif %}
-            {% if tables['entities'].rows %}
-                {{ tables['entities'].display('entities')|safe }}
+            <h1>{{ node.name }}</h1>
+            {% if super_ %}
+                <p>{{_('super')|uc_first}}: {{ super_|link|safe }}</p>
             {% endif %}
-            {% if tables['link_entities'].rows %}
-                {{ tables['link_entities'].display('link_entities')|safe }}
+            {{ info|display_info }}
+            {% if root.value_type %}
+                <p>{{_('unit')|uc_first}}: {{node.description}}</p>
+            {% else %}
+                {{ node|description }}
             {% endif %}
+            {{ node|api_link }}
         </div>
-    {% endif %}
+        {% if tables['subs'].rows %}
+            <div class="tab-pane fade" role="tabpanel" id="tab-subs">
+                {{ tables['subs'].display('subs')|safe }}
+            </div>
+        {% endif %}
+        {% if tables['entities'].rows or tables['link_entities'].rows %}
+            <div class="tab-pane fade" role="tabpanel" id="tab-entities">
+                {% if 'editor'|is_authorized and not root.value_type %}
+                    <div class="toolbar">
+                        {{ _('move entities')|button(url_for('node_move_entities', id_=node.id)) }}
+                    </div>
+                {% endif %}
+                {% if tables['entities'].rows %}
+                    {{ tables['entities'].display('entities')|safe }}
+                {% endif %}
+                {% if tables['link_entities'].rows %}
+                    {{ tables['link_entities'].display('link_entities')|safe }}
+                {% endif %}
+            </div>
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
