--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -6,26 +6,27 @@
     <div class="toolbar">
         {{ 'Form_field_type'|manual_link }}
     </div>
-    <div id="tabs-menu" class="tabs-container">
-        <ul>
-            <li><a href="#menu-tab-system">{{ _('system types')|uc_first }}</a></li>
-            <li><a href="#menu-tab-custom">{{ _('custom types')|uc_first }}</a></li>
-            <li><a href="#menu-tab-value">{{ _('value types')|uc_first }}</a></li>
-            <li><a href="#menu-tab-places">{{ _('places')|uc_first }}</a></li>
+    <div>
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true"  href="#menu-tab-system">{{ _('system types')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false"  href="#menu-tab-custom">{{ _('custom types')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false"  href="#menu-tab-value">{{ _('value types')|uc_first }}</a></li>
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" role="tab" aria-selected="false"  href="#menu-tab-places">{{ _('places')|uc_first }}</a></li>
         </ul>
+        <div class="tab-content" id="menuTabContent">
         {% for type_ in ['system', 'custom', 'value', 'places'] %}
-            <div id="menu-tab-{{ type_ }}" style="padding: 0;" class="tab-content">
-                <div id="tabs-{{ type_ }}" class="tabs-container">
-                    <ul>
-                        {% for node, tree in nodes[type_].items() %}
-                            <li><a href="#tab-{{ node.id }}">{{ node.name }}</a></li>
-                        {% endfor %}
-                        {% if type_ in ['custom', 'value'] and 'manager'|is_authorized %}
-                            <span style="margin:1em;">{{ _('type')|button(url_for('hierarchy_insert', param=type_)) }}</span>
-                        {% endif %}
-                    </ul>
+            <div class="tab-pane fade" role="tabpanel" id="menu-tab-{{ type_ }}" style="padding: 0;">
+
+                <div class="accordion" id="TypeAccordion">
                     {% for node, tree in nodes[type_].items() %}
-                        <div id="tab-{{ node.id }}">
+                      <div class="card">
+                        <div class="card-header accordionheader" id="heading-{{ node.id }}">
+                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapse-{{ node.id }}" aria-expanded="true" aria-controls="collapse-{{ node.id }}">
+                              {{ node.name }}
+                            </button>
+                        </div>
+                        <div id="collapse-{{ node.id }}" class="collapse" aria-labelledby="headingOne" data-parent="#TypeAccordion">
+                          <div class="card-body">
                             <p><strong>{{ node.name }}</strong></p>
                             <div style="float:left;margin-right:3em;">
                                 <div class="toolbar">
@@ -85,20 +86,21 @@
                                     </div>
                                 {% endif %}
                             </div>
+                          </div>
                         </div>
+                      </div>
                     {% endfor %}
+                    {% if type_ in ['custom', 'value'] and 'manager'|is_authorized %}
+                        <span style="margin:1em;">{{ _('type')|button(url_for('hierarchy_insert', param=type_)) }}</span>
+                    {% endif %}
                 </div>
             </div>
         {% endfor %}
+        </div>
     </div>
     <script>
         $(document).ready(function () {
-            $("#tabs-menu").tabs();
-            $("#tabs-system").tabs().addClass("ui-tabs-vertical");
-            $("#tabs-custom").tabs().addClass("ui-tabs-vertical");
-            $("#tabs-places").tabs().addClass("ui-tabs-vertical");
-            $("#tabs-value").tabs().addClass("ui-tabs-vertical");
-            openParentTab();
+            $('#menu-tab-system').tab('show')
         });
     </script>
 {% endblock %}
