--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block content %}
 <div class="row">
-    <div class="col">
+    <div class="col-6">
         <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item"> <a class="nav-link active" data-toggle="tab" role="tab" aria-selected="true" href="#tab-info">{{ _('info')|uc_first }}</a></li>
             <li class="nav-item"> <a class="nav-link" data-toggle="tab" role="tab" aria-selected="false" href="#tab-source">{{ _('source')|uc_first }} {{ tables['source']|format_tab_number }}</a></li>
@@ -126,7 +126,7 @@
             {% endif %}
         </div>
     </div>
-    <div class="col">
+    <div class="col-6">
         {% if gis_data %}
             <div id="map" class="map"></div>
             <script src="/static/js/map/map.js"></script>
