--- a/openatlas/templates/place/map_draw.html
+++ b/openatlas/templates/place/map_draw.html
@@ -1,7 +1,13 @@
-<div id='map-info-display' style="float:left;">
-    {{ form|display_form }}
+<div class="row">
+    <div class="col-4">
+        <div id='map-info-display' style="float:left;">
+            {{ form|display_form }}
+        </div>
+    </div>
+    <div class="col-8">
+        <div id="map" class="map"></div>
+    </div>
 </div>
-<div id="map" class="map"></div>
 <link rel="stylesheet" href="/static/vendor/leaflet-1.3.4/Leaflet.draw-1.0.2.css">
 
 <script src="/static/vendor/leaflet-1.3.4/EasyButton-2.3.0/src/easy-button.js"></script>
