--- a/openatlas/templates/admin/newsletter.html
+++ b/openatlas/templates/admin/newsletter.html
@@ -8,7 +8,7 @@
         <div style="float:left;">
             {{ form.subject(class_="required") }}<br><br>
             {{ form.body(class_="required") }}<br>
-            {{ form.send }}
+            {{ form.send(class_=config['CSS']['button']['primary']) }}
         </div>
         <div style="float:left;margin-left:1em;">
             {{ table.display()|safe }}
