--- a/openatlas/templates/profile/update.html
+++ b/openatlas/templates/profile/update.html
@@ -52,6 +52,10 @@
                     <div>{{ form.max_zoom.label|safe }} {{ form.max_zoom.description|display_tooltip|safe }}</div>
                     <div class="table-cell">{{ form.max_zoom(class_='integer') }}</div>
                 </div>
+                <div class="table-row">
+                    <div>{{ form.default_zoom.label|safe }} {{ form.default_zoom.description|display_tooltip|safe }}</div>
+                    <div class="table-cell">{{ form.default_zoom(class_='integer') }}</div>
+                </div>
             </div>
         </div>
         {% if 'contributor'|is_authorized %}
