--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -42,11 +42,12 @@
 
         {% if 'contributor'|is_authorized %}
             <h1>{{ _('data transfer')|uc_first }}</h1>
-            <a href="{{ url_for('import_index') }}">{{ _('import')|uc_first }}</a>
             {% if 'manager'|is_authorized %}
+                <a href="{{ url_for('admin_api') }}">API</a>
                 <a href="{{ url_for('export_csv') }}">{{ _('export')|uc_first }} CSV</a>
                 <a href="{{ url_for('export_sql') }}">{{ _('export')|uc_first }} SQL</a>
             {% endif %}
+            <a href="{{ url_for('import_index') }}">{{ _('import')|uc_first }}</a>
             {% if 'admin'|is_authorized %}
                 <a href="{{ url_for('sql_index') }}">SQL</a>
             {% endif %}
