Resize of textareas in all directions

--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -4,6 +4,10 @@ html, body, input, select, textarea {
     font-family: helvetica, arial, sans-serif;
 }
 
+textarea {
+    resize: both;
+}
+
 img#logo {
     height: 40px;
 }
