Layout fixes for error pages

--- a/openatlas/templates/400.html
+++ b/openatlas/templates/400.html
@@ -3,10 +3,8 @@
     400 - Bad Request
 {% endblock %}
 {% block content %}
-<div style="text-align:center;padding-top:1em;">
-    <p style="font-size:18px;">
-        400 - Bad Request
-    </p>
+<div class="container" style="text-align:center;">
+    <h1>400 - Bad Request</h1>
     <p>
         {{ _('The request had bad syntax or was inherently impossible to solve.') }}
     </p>
