--- a/openatlas/templates/403.html
+++ b/openatlas/templates/403.html
@@ -3,13 +3,9 @@
     403 - Forbidden
 {% endblock %}
 {% block content %}
-<div style="text-align:center;padding-top:1em;">
-    <p style="font-size:18px;">
-        403 - Forbidden
-    </p>
-    <p>
-        {{ _('This page is restricted.') }}
-    </p>
+<div class="container" style="text-align:center;">
+    <h1>403 - Forbidden</h1>
+    <p>{{ _('This page is restricted.') }}</p>
     <p>
         {{ _('Use the back button of your browser or click <a href="/">here</a> to go to the main page.') }}
     </p>
