--- a/openatlas/templates/404.html
+++ b/openatlas/templates/404.html
@@ -3,10 +3,8 @@
     404 - File not found
 {% endblock %}
 {% block content %}
-<div style="text-align:center;padding-top:1em;">
-    <p style="font-size:18px;">
-        404 - File not found
-    </p>
+<div class="container" style="text-align:center;">
+    <h1>404 - File not found</h1>
     <p>
         {{ _('We are so sorry!') }}
     </p>
