--- a/openatlas/templates/418.html
+++ b/openatlas/templates/418.html
@@ -3,10 +3,8 @@
     418 - I’m a teapot
 {% endblock %}
 {% block content %}
-<div style="text-align:center;padding-top:1em;">
-    <p style="font-size:18px;">
-        418 - I’m a teapot
-    </p>
+<div class="container" style="text-align:center;">
+    <h1>418 - I’m a teapot</h1>
     <img src="/static/images/layout/418.jpg" alt="418 - I’m a teapot">
     <p>
         This entry doesn't exist. Maybe you followed an out-dated link.
