--- a/openatlas/templates/422.html
+++ b/openatlas/templates/422.html
@@ -3,10 +3,8 @@
     418 - Unprocessable entity
 {% endblock %}
 {% block content %}
-<div style="text-align:center;padding-top:1em;">
-    <p style="font-size:18px;">
-        422 - Unprocessable entity
-    </p>
+<div class="container" style="text-align:center;">
+    <h1>422 - Unprocessable entity</h1>
     <p>
         The request couldn't be processed.
     </p>
