--- a/openatlas/templates/types/view.html
+++ b/openatlas/templates/types/view.html
@@ -27,15 +27,19 @@
                 </div>
             {% endif %}
             <h1>{{ node.name }}</h1>
-            {% if super_ %}
-                <p>{{_('super')|uc_first}}: {{ super_|link|safe }}</p>
-            {% endif %}
-            {{ info|display_info }}
-            {% if root.value_type %}
-                <p>{{_('unit')|uc_first}}: {{node.description}}</p>
-            {% else %}
-                {{ node|description }}
-            {% endif %}
+            {{ profile_image_id|display_profile_image }}
+            <div style="float:left;">
+                {% if super_ %}
+                    <p>{{_('super')|uc_first}}: {{ super_|link|safe }}</p>
+                {% endif %}
+                {{ info|display_info }}
+                {% if root.value_type %}
+                    <p>{{_('unit')|uc_first}}: {{node.description}}</p>
+                {% else %}
+                    {{ node|description }}
+                {% endif %}
+            </div>
+            <div style="clear:both;"></div>
         </div>
         {% if tables['subs'].rows %}
             <div class="tab-pane fade" role="tabpanel" id="tab-subs">
@@ -59,9 +63,9 @@
         {% endif %}
         <div class="tab-pane fade" role="tabpanel" id="tab-file">
             {% if 'contributor'|is_authorized %}
-                <div class="button-bar">
-                    <a href="{{ url_for('node_add_file', id_=node.id)}}">{{ _('add')|uc_first }}</a>
-                    <a href="{{ url_for('file_insert', origin_id=node.id) }}">+ {{ _('file')|uc_first }}</a>
+                <div class="toolbar">
+                    {{ _('add')|button(url_for('node_add_file', id_=node.id)) }}
+                    {{ _('file')|button(url_for('file_insert', origin_id=node.id)) }}
                 </div>
             {% endif %}
             {{ tables['file'].display('file')|safe }}
