--- a/openatlas/templates/types/view.html
+++ b/openatlas/templates/types/view.html
@@ -64,7 +64,7 @@
         <div class="tab-pane fade" role="tabpanel" id="tab-file">
             {% if 'contributor'|is_authorized %}
                 <div class="toolbar">
-                    {{ _('add')|button(url_for('node_add_file', id_=node.id)) }}
+                    {{ _('add')|button(url_for('entity_add_file', id_=node.id)) }}
                     {{ _('file')|button(url_for('file_insert', origin_id=node.id)) }}
                 </div>
             {% endif %}
