--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('actor')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [_('actor')]|crumb }}
 {% endblock %}
