--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('event')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [_('event')]|crumb }}
 {% endblock %}
