--- a/openatlas/templates/source/add.html
+++ b/openatlas/templates/source/add.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('source')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [[_('source'), 'source_index'], source, _('add') + ' ' + _(class_name).capitalize()]|crumb }}
 {% endblock %}
