--- a/openatlas/templates/source/index.html
+++ b/openatlas/templates/source/index.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
+{% block title_name %} - {{ _('source')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {{ [_('source')]|crumb }}
 {% endblock %}
