--- a/openatlas/templates/source/insert.html
+++ b/openatlas/templates/source/insert.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+{% block title_name %} - {{ _('source')|uc_first }}{% endblock %}
 {% block breadcrumb %}
     {% if origin %}
         {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + _('source').capitalize()]|crumb }}
